fastapi to openapi bug
